--- a/styles.css
+++ b/styles.css
@@ -1,56 +1,22 @@
+  /* Setting base font size */
 html {
-  /* Setting a base font size of 10px give us easier rem calculations
-       Info: 1rem === 10px, 1.5rem === 15px, 2rem === 20px and so forth
-     */
   font-size: 10px;
 }
-
 body {
-  /* Native font stack https://getbootstrap.com/docs/4.2/content/reboot/#native-font-stack */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
     'Helvetica Neue', Arial, sans-serif;
-  font-size: 1.6rem;
+  font-size: 16px;
   line-height: 1.5;
-  text-align: center;
   color: #333;
   margin: 0;
 }
-
-h1 {
-  font-size: 4rem;
-  margin-bottom: 0;
-}
-
-@media (max-width: 460px) {
-  h1 {
-    font-size: 3.5rem;
-    line-height: 1.2;
-  }
-}
-
-h2 {
-  font-size: 3.25rem;
-}
-
-a {
-  color: #477ca7;
-}
-
-a:visited {
-  color: #74638f;
-}
-
 #main {
-  margin: 30px 8px;
-  padding: 15px;
-  border-radius: 5px;
   background: #eee;
+  padding: 15px;
 }
-
-@media (max-width: 460px) {
-  #main {
-    margin: 0;
-  }
+#img-div {
+   background: #fff;
+  padding: 10px;
 }
 
 img {
@@ -59,42 +25,57 @@ img {
   height: auto;
   margin: 0 auto;
 }
-
-#img-div {
-  background: white;
-  padding: 10px;
-  margin: 0;
-}
-
 #img-caption {
   margin: 15px 0 5px 0;
 }
-
-@media (max-width: 460px) {
-  #img-caption {
-    font-size: 1.4rem;
-  }
-}
-
 #headline {
-  margin: 50px 0;
+  margin-top: 50px;
+  text-align: center;
+}
+#title, main > p, #img-caption {
   text-align: center;
 }
 
 ul {
-  max-width: 550px;
   margin: 0 auto 50px auto;
-  text-align: left;
   line-height: 1.6;
+  max-width: 550px;
 }
-
 li {
   margin: 16px 0;
 }
-
 blockquote {
-  font-style: italic;
-  max-width: 545px;
+  max-width: 550px;
   margin: 0 auto 50px auto;
   text-align: left;
+  font-style: italic;
 }
+h3 {
+  margin: 0 auto 50px auto;
+  max-width: 900px;
+}
+a {
+  color: #477ca7;
+}
+
+a:visited {
+  color: #74638f;
+}
+
+
+/* FOR MOBILE RESPONSIVENESS */
+@media (max-width: 460px) {
+  h1 {
+    font-size: 35px;
+    line-height: 1.2;
+  }
+  #main {
+    margin: 0;
+  }
+  #img-caption {
+    font-size: 14px;
+  }
+}
+
+
+
